--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "deck.gl": "^8.6.4",
+    "hex-rgb": "^5.0.0",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^6.1.17",
     "react-scripts": "4.0.3",
     "reactcss": "^1.2.3",
     "recharts": "^2.1.6",
